without clobbering server partnerships.

01/04/2008 - 115100 Dr J A Gow
------------------------------

Fixed minor problem with exceptions being generated in file sync code
when an item has been removed on both host and remote before syncing.


05/04/2008 - 130900 Dr J A Gow
------------------------------

Added new API to sync-engine: GetDeviceBindingState().
in_signature is none, out_signature is 'u'. It takes no arguments
and returns an integer, which can take on one of the three values
below (defined in constants.py).

BSTATE_DEVNOTCONNECTED (0): device not connected
BSTATE_DEVNOTBOUND     (1): device connected but no partnership binding
                            available
BSTATE_DEVBOUND        (2): device fully bound and ready to sync.

This function will not throw exceptions and is designed to be able
to cleanly query the state of the device as seen by sync-engine at any time.

This change was committed in r3363 but owing to an oversight this CHANGELOG
entry was omitted.

05/04/2008 - 143500 Dr J A Gow
------------------------------

Code cleanups in airsync.py, no functionality changes.


16/04/2008 - 170200 Mark Ellis
------------------------------

Added initialisation of self.partnerships, which was causing a traceback from
_ProcessAuth on connection of a locked device because the attribute did not
yet exist.

Added support for devices connected via synce-hal. Odccm support is unaffected,
no configuration is required.


23/04/2008 - 200000 Mark Ellis
------------------------------

Changes to auth procedure on locked devices for WM6.

06/05/2008 - 214500 Dr J A Gow
------------------------------

Folded in patches from Daniel Frickemeyer to correct the handling of categories
in tasks and events when using Opensync 0.3x.


07/05/2008 - 140000 Mark Ellis
------------------------------

Clarify handling of WM6 authorisation on device from user perspective, ie. output 
a suitable message instead of 'auth failed'
